--- a/bikcraft/web/produtos.html
+++ b/bikcraft/web/produtos.html
@@ -160,9 +160,9 @@
         <div class="grid-4 footer-contato">
           <h3>Contato</h3>
           <ul>
-            <li>- (37)9999-9999</li>
+            <li>- (21)9999-9999</li>
             <li>- contato@bikcraft.com</li>
-            <li>- Itaúna - MG</li>
+            <li>- Rio de Janeiro</li>
           </ul>
         </div>
 
