--- a/bikcraft/web/portfolio.html
+++ b/bikcraft/web/portfolio.html
@@ -6,6 +6,15 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Bikcraft - Portfólio</title>
 
+  <meta name="description" content="Compre a sua bicicleta personalizada na Bikcraf. Possuimos modelos Passeio, Retro e Esporte."> <!-- Description Até 140 caracteres -->
+		<meta property="og:type" content="website"/>
+		<meta property="og:title" content="Bikcraft - Bicicletas Personalizadas"/>
+		<meta property="og:description" content="Compre a sua bicicleta personalizada na Bikcraf. Possuimos modelos Passeio, Retro e Esporte."/>
+		<meta property="og:url" content="http://bikcraft.com/"/>
+		<meta property="og:image" content="http://bikcraft.com/img/og-image.png"/><!--gerar tamanho 300x300, colocar o caminho http da imagem-->
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<link rel="shortcut icon" href="favicon.ico"><!--gerar tamanho 200x200, ir em algum site de favicon generator-->
+
   <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
   <link rel="icon" href="img/favicon.ico" type="image/x-icon">
 
